<resources>
    <string name="app_name">Move</string>
    <string name="home_fragment_title">Map fragment</string>
    <string name="login_fragment_title">Login fragment</string>
    <string name="address_template">%1$s %2$s</string>
    <string name="time_seconds_template">%1$s:%2$s:%3$s</string>
    <string name="time_minutes_template">%1$s:%2$s min</string>
    <string name="distance_template">%1$.1f km</string>

    <!-- Buttons text -->
    <string name="map_btn_text">Map</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="help_btn_text">Help</string>

    <!-- region OnboardingFragment -->
    <string name="onboarding_next_btn_text">Next</string>
    <string name="onboarding_skip_btn_text">Skip</string>
    <string name="onboarding_get_started_btn_text">Get started</string>
    <string name="onboarding_title_first_page">Safety</string>
    <string name="onboarding_title_second_page">Scan</string>
    <string name="onboarding_title_third_page">Parking</string>
    <string name="onboarding_title_fourth_page">Rules</string>
    <string name="onboarding_description_first_page">Please wear a helmet and protect yourself while riding</string>
    <string name="onboarding_description_second_page">Scan the QR code or NFC sticker on top of the scooter to unlock and ride.</string>
    <string name="onboarding_description_third_page">If convenient, park at a bike rack. If not, park close to the edge of the sidewalk closest to the street. Do not block sidewalks, doors or ramps.</string>
    <string name="onboarding_description_fourth_page">You must be 18 years or and older with a valid driving licence to operate a scooter. Please follow all street signs, signals and markings, and obey local traffic laws.</string>

    <!-- region Register -->
    <string name="register_title">Let\'s get started</string>
    <string name="register_description">Sign up or login and start riding right away</string>
    <string name="register_email_hint">Email address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_terms_privacy_text">By continuing you agree to Move’s Terms and Conditions and Privacy Policy</string>
    <string name="register_terms_and_conditions_text">Terms and Conditions</string>
    <string name="register_privacy_policy_text">Privacy Policy</string>
    <string name="register_login_text">You already have an account? You can log in here</string>
    <string name="register_login_here_text">log in here</string>
    <string name="register_get_started_button_text">Get started</string>

    <!-- region Login -->
    <string name="login_title">Login</string>
    <string name="login_description">Enter your account credentials and start riding away</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_text">Forgot your password?</string>
    <string name="login_button_text">Login</string>
    <string name="login_register_text">Don’t have an account? You can start with one here</string>
    <string name="login_create_account_text">start with one here</string>

    <!-- region ForgotPassword -->
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_description">Enter the email address you’re using for your account bellow and we’ll send you a password reset link.</string>
    <string name="forgot_password_reset_link_button_text">Send Reset Link</string>
    <string name="forgot_password_dialog_title">Password reset link sent</string>
    <string name="forgot_password_dialog_description">Please check your inbox or spam for the email containing the password reset link.</string>
    <string name="forgot_password_dialog_ok_btn_text">OK</string>

    <!-- region ResetPassword -->
    <string name="reset_password_title">Reset password</string>
    <string name="reset_password_new_password_hint">New password</string>
    <string name="reset_password_confirm_password_hint">Confirm new password</string>
    <string name="reset_password_button_text">Reset password</string>
    <string name="reset_password_do_not_match">Password doesn’t match</string>

    <!-- region DrivingLicense -->
    <string name="driving_license_toolbar_title">Driving license</string>
    <string name="driving_license_add_license_btn_text">Add driving license</string>
    <string name="driving_license_description">Please take a photo or upload the front side of your driving license so we can make sure that it is valid.</string>
    <string name="driving_license_title">Before you can start riding</string>
    <string name="driving_license_fail_message">Could not take picture!</string>
    <string name="driving_license_verify_status">We are currently verifying your driving license</string>
    <string name="driving_license_find_scooters_btn_text">Find scooters</string>
    <string name="driving_license_permission_denied">Camera permission denied</string>
    <string name="driving_license_validated_status">We’ve successfully validated your driving license</string>

    <!-- region MapFragment -->
    <string name="map_toolbar_default_title">Allow location</string>
    <string name="map_location_denied_message">Location permission denied!</string>

    <!-- region ViewScooterInfo -->
    <string name="view_scooter_info_title">Scooter</string>
    <string name="view_scooter_info_unlock_btn_text">Unlock</string>

    <!-- region UnlockDialog -->
    <string name="unlock_dialog_title">You can unlock this scooter\nthrough these methods:</string>
    <string name="unlock_dialog_ring_btn_label">Ring</string>
    <string name="unlock_dialog_missing_btn_label">Missing</string>
    <string name="unlock_nfc_btn_text">NFC</string>
    <string name="unlock_qr_btn_text">QR</string>
    <string name="unlock_code_btn_text">123</string>
    <string name="unlock_or_label">or</string>
    <string name="unlock_alternately_label">Alternately you can unlock using</string>

    <!-- region UnlockCode -->
    <string name="unlock_code_toolbar_title">Enter serial number</string>
    <string name="unlock_code_title">Enter the scooter’s \n serial number</string>
    <string name="unlock_code_description">You can find it on the \n scooter’s front panel</string>

    <!-- region UnlockQR -->
    <string name="unlock_qr_toolbar_title">Unlock Scooter</string>
    <string name="unlock_qr_title">Scan QR</string>
    <string name="unlock_qr_description">You can find it on the \n scooter’s front panel</string>

    <!-- region UnlockNFC -->
    <string name="unlock_nfc_toolbar_title">Unlock Scooter</string>
    <string name="unlock_nfc_title">NFC unlock</string>
    <string name="unlock_nfc_description">Hold your phone close to the NFC Tag \n located on top of the handlebar of \n your scooter.</string>

    <!-- region UnlockSuccessful -->
    <string name="unlock_successful_message">Please respect all the driving regulations \n and other participants in traffic while using \n our scooters.</string>
    <string name="unlock_successful_title">Unlock \n successful</string>

    <!-- region StartRide -->
    <string name="start_ride_button_text">Start ride</string>

    <!-- region Menu -->
    <string name="menu_total_rides_template">Total rides: %1$d</string>
    <string name="menu_title_template">Hi %s!</string>
    <string name="menu_history_label">History</string>
    <string name="menu_see_rides_btn_text">See all</string>
    <string name="menu_general_settings_text">General Settings</string>
    <string name="menu_account_text">Account</string>
    <string name="menu_change_password_text">Change password</string>
    <string name="menu_legal_text">Legal</string>
    <string name="menu_terms_and_conditions_text">Terms and Conditions</string>
    <string name="menu_privacy_policy_text">Privacy Policy</string>
    <string name="menu_rate_us_text">Rate Us</string>

    <!-- region TripDetails -->
    <string name="trip_details_title">Trip Details</string>
    <string name="trip_details_time_label">Travel time</string>
    <string name="trip_details_distance_label">Distance</string>
    <string name="trip_details_lock_btn_text">Lock</string>
    <string name="trip_details_unlock_btn_text">Unlock</string>
    <string name="trip_details_end_ride_btn_text">End ride</string>
    <string name="trip_details_battery_label">Battery</string>

    <!-- region TripsHistory -->
    <string name="trips_history_title">History</string>
    <string name="trips_history_from_text">From</string>
    <string name="trips_history_to_text">To</string>
    <string name="trips_history_time_text">Travel time</string>
    <string name="trips_history_distance_text">Distance</string>

    <!-- region Account -->
    <string name="account_email_hint">Email address</string>
    <string name="account_username_hint">Username</string>
    <string name="account_title">Account</string>
    <string name="account_log_out_text">Log out</string>

    <!-- region ChangePassword -->
    <string name="change_pass_title">Change password</string>
    <string name="change_pass_old_pass_hint">Old password</string>
    <string name="change_pass_new_pass_hint">New password</string>
    <string name="change_pass_confirm_pass_hint">Confirm new password</string>

    <!-- region TripSummary -->
    <string name="trip_summary_title">Trip summary</string>
    <string name="trip_summary_from_text">From</string>
    <string name="trip_summary_to_text">To</string>
    <string name="trip_summary_time_text">Time</string>
    <string name="trip_summary_distance_text">Distance</string>
    <string name="trip_summary_map_btn_text">Return to map</string>
</resources>