<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/driving_license_toolbar_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Heading3"
        app:titleTextColor="@color/text_color_dark" />

    <ImageView
        android:id="@+id/backgroundIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_driving_license"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleTV"
        style="@style/Heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin_size"
        android:layout_marginTop="@dimen/small_margin_size"
        android:text="@string/driving_license_title"
        android:textColor="@color/text_color_dark" />

    <TextView
        android:id="@+id/descriptionTV"
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/medium_margin_size"
        android:layout_marginTop="@dimen/small_margin_size"
        android:layout_weight="1"
        android:alpha="0.7"
        android:text="@string/driving_license_description"
        android:textColor="@color/text_color_dark" />

    <Button
        android:id="@+id/addLicenseBtn"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin_size"
        android:layout_marginBottom="@dimen/medium_margin_size"
        android:text="@string/driving_license_add_license_btn_text" />
</LinearLayout>