<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/forgot_password_dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="?attr/colorPrimaryVariant"
    app:cardCornerRadius="@dimen/medium_margin_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin_size">

        <TextView
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password_dialog_title" />

        <TextView
            style="@style/Caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_size"
            android:text="@string/forgot_password_dialog_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/okBtn"
            style="@style/Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_margin_size"
            android:background="@drawable/ic_narrow_pink_rectangle"
            android:text="@string/forgot_password_dialog_ok_btn_text" />
    </LinearLayout>
</androidx.cardview.widget.CardView>