<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/medium_margin_size">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/menu_guideline_start_margin" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        android:backgroundTint="@color/text_color_dark"
        app:layout_constraintBottom_toBottomOf="@id/avatarIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatarIV"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleTV"
        style="@style/Heading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toBottomOf="@id/avatarIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatarIV"
        tools:text="Hi conor!" />

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_avatar_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_scooter3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/historyCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin_size"
        app:cardCornerRadius="@dimen/medium_margin_size"
        app:layout_constraintTop_toBottomOf="@id/avatarIV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_history_card_height"
            android:background="@drawable/bg_history"
            android:padding="@dimen/medium_margin_size">

            <TextView
                android:id="@+id/historyTV"
                style="@style/Heading5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_bold"
                android:text="@string/menu_history_label"
                app:layout_constraintBottom_toTopOf="@id/ridesNumberTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/ridesNumberTV"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_total_rides_template"
                android:textColor="@color/text_color_light_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/historyTV" />

            <Button
                android:id="@+id/seeRidesBtn"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/menu_see_rides_btn_text"
                android:textAppearance="@style/Button1"
                app:layout_constraintBottom_toBottomOf="@id/ridesNumberTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/historyTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@id/generalSettingsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/generalSettingsTV"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/generalSettingsTV"
        style="@style/Heading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_general_settings_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/accountTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/historyCV" />

    <TextView
        android:id="@+id/accountTV"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_account_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/changePassTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/generalSettingsTV" />

    <TextView
        android:id="@+id/changePassTV"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_change_password_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/legalTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/accountTV" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_flag"
        app:layout_constraintBottom_toBottomOf="@id/legalTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/legalTV"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/legalTV"
        style="@style/Heading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_legal_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/termsAndConditionsTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/changePassTV" />

    <TextView
        android:id="@+id/termsAndConditionsTV"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_terms_and_conditions_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/privacyPolicyTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/legalTV" />

    <TextView
        android:id="@+id/privacyPolicyTV"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_privacy_policy_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@id/rateTV"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/termsAndConditionsTV" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/rateTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rateTV"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rateTV"
        style="@style/Heading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/menu_rate_us_text"
        android:textColor="@color/text_color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/privacyPolicyTV" />
</androidx.constraintlayout.widget.ConstraintLayout>